--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,27 @@
 {
+    // Scans builtin modules as well
+  "node-module-intellisense.scanBuiltinModules": true,
+
+  // Scans devDependencies as well
+  "node-module-intellisense.scanDevDependencies": true,
+
+  // Scans file modules as well
+  "node-module-intellisense.scanFileModules": true,
+
+  /**
+   * Scans alternative module paths (eg. Search on ${workspcaceRoot}/lib).
+   * Useful when using packages like (https://www.npmjs.com/package/app-module-path) to manage require paths folder.
+   **/
+  "node-module-intellisense.modulePaths": [],
+
+  // File module extensions
+  "node-module-intellisense.fileModuleExtensions": [
+    ".js",
+    ".jsx",
+    ".ts",
+    ".d.ts",
+    ".tsx",
+    ".vue",
+    ".json"
+  ],
 }
