--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "runtimeExecutable": "/home/eric/.nvm/versions/node/v8.10.0/bin/node",
             "type": "node",
             "request": "launch",
             "name": "启动程序",
